fix(menu): making styling on safari less ugly

--- a/src/components/menu/control.module.scss
+++ b/src/components/menu/control.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   max-width: 150px;
-  margin: 5px;
+  margin: 5px 10px;
   font-weight: bold;
   text-align: center;
   justify-content: center;
