--- a/src/components/menu/index.module.scss
+++ b/src/components/menu/index.module.scss
@@ -58,6 +58,7 @@
 }
 
 .refresh {
+  border: 0;
   margin: 15px;
   height: 30px;
   width: 50px;
@@ -67,9 +68,21 @@
   background-color: white;
   background-image: none;
   -webkit-appearance: none;
+
+  &:focus {
+    border: 0;
+  }
+
+  &:hover {
+    background-color: lightgray;
+  }
 }
 
 .refreshIcon {
   height: 25px;
   width: 25px;
+}
+
+.input {
+  width: 100%;
 }
